--- a/cursoJS/Curso de JavaScript e TypeScript do básico ao avançado/React/lista-de-tarefas/src/App.css
+++ b/cursoJS/Curso de JavaScript e TypeScript do básico ao avançado/React/lista-de-tarefas/src/App.css
@@ -1,10 +1,14 @@
 *{
-  padding: 0;
   margin: 0;
+  padding: 0;
   outline: 0;
   box-sizing: border-box;
 }
 
 body{
   background-color: #0a4f70;
+}
+
+button{
+  cursor: pointer;
 }
