--- a/cursoJS/Curso de JavaScript e TypeScript do básico ao avançado/React/lista-de-tarefas/src/Main.css
+++ b/cursoJS/Curso de JavaScript e TypeScript do básico ao avançado/React/lista-de-tarefas/src/Main.css
@@ -1,4 +1,4 @@
-.main{
+.main {
     background-color: aliceblue;
     padding: 30px;
     margin: 50px auto;
@@ -7,28 +7,29 @@
     box-shadow: 0 0 20px black;
 }
 
-.main h1{
+.main h1 {
     font-size: 22px;
     text-align: center;
 }
 
-.formulario{
+.formulario {
     margin-top: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.formulario input[type="text"]{
+.formulario input[type="text"] {
     height: 40px;
     min-width: 80%;
     padding: 0 20px;
     border: 1px solid #ccc;
- }
-.formulario button[type="submit"]{
+}
+
+.formulario button[type="submit"] {
     border: none;
     height: 40px;
-    width:40px;
+    width: 40px;
     background-color: #f04c64;
     color: aliceblue;
     display: flex;
@@ -36,3 +37,42 @@
     justify-content: center;
 }
 
+.tarefas {
+    margin-top: 30px;
+}
+
+.tarefas :hover {
+    background-color: #51c5de;
+}
+
+.tarefas li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    transition: all 600ms;
+}
+
+.tarefas li .edit {
+    margin-right: 15px;
+    color: #51c5de;
+    cursor: pointer;
+}
+
+
+.tarefas li .close {
+    color: #f04c64;
+    cursor: pointer;
+}
+
+
+.tarefas li:hover .edit,
+.tarefas li:hover .close {
+    color: black;
+    transition: all 600ms;
+}
+
+.tarefas li span{
+    display: flex;
+    align-items: center;
+}
